App.css: fixed overflow issues

--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,10 @@
   --footer-gradient: linear-gradient(to top, #1B0F29, #2F0743);
 }
 
+h1, p {
+  overflow-wrap: break-word;
+}
+
 body {
 	color: var(--text-main);
 	font-family: "Inter",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,sans-serif;
@@ -64,20 +68,20 @@ body {
 #Layout-container .sidebar {
   display: flex;
   align-content: flex-end;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   flex-direction: column;
   justify-content: flex-start;
   max-width: 5rem;
   flex-grow: 1;
   padding: 0;
+  overflow-x: hidden;
+  flex-shrink: 0;
 }
 
-#Layout-container > div {
+#Layout-container > .sidebar {
   flex: 1 0 100%;
 }
 
-.sidebar > header{
-}
 #toggle-button > div{
   display: inline-block;
 }
@@ -88,7 +92,6 @@ body {
 	background: var(--header-gradient);
 	border-bottom: 2px solid rgb(30, 0, 30);
 }
-
 
 .card-avatar{
   width:100%; 
